# CPP-Exercise

./: Clock.cpp  Clock.h  main.cpp
ClockFunc/: Clock.cpp  main.cpp
CompanyManagementSystem/: CMakeLists.txt  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  salesman.cpp  salesman.h  salesmanager.cpp  salesmanager.h  technician.cpp  technician.h
fstreamWrite&ReadTest/: CMakeLists.txt  main.cpp
myVectorTest/: CMakeLists.txt  main.cpp  myVector.h
